@@ -2,12 +2,21 @@ h1. CHANGELOG
 
 h2. Version 0.0.2
 
-* Fixed the --dry-run option of bulk:import
-* added a --update option to bulk:import which forces a "INSERT or UPDATE" on existing key values.
+h3. Major enhancements
+
 * Added support for SQL views in yaml schemas
+* Added a --update option to bulk:import which forces a "INSERT or UPDATE" on existing key values.
+* Added --include and --exclude options to schema:dump
+
+h3. Minor enhancements
+
 * Restful POST now does a "INSERT or UPDATE" when a key value already exists (will certainly change in the future)
-* Fixed a contract bug in Sequel's contract implementation (update returns updated tuple)
 * Added a basic HTML io generation and --html on bulk:export
+
+h3. Bugfixes
+
+* Fixed the --dry-run option of bulk:import
+* Fixed a contract bug in Sequel's contract implementation (update returns updated tuple)
 * Fixed a bug on attribute default being _false_
 * Fixed bugs in SchemaObject's query methods about object kinds
 
